Prepare v0.1.8 cloud update
